<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/film_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="6dp"
    app:cardElevation="@dimen/cardview_compat_inset_shadow">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/corCardFilme"
        android:orientation="horizontal">
        <!-- Ícone do filme -->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
            <!-- Title, secondary and supporting text -->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtFilmTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_bold"
                    android:text="@string/film_name"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    android:textColor="@color/white"
                    android:textSize="19sp" />

                <TextView
                    android:id="@+id/txtFilmYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/film_year"
                    android:textColor="@color/white"
                    android:fontFamily="@font/quicksand_light"
                    android:layout_marginStart="6dp" />

                <View
                    android:id="@+id/divider1"
                    android:layout_width="0.5dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:background="@color/white" />

                <TextView
                    android:id="@+id/txtFilmDuration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/film_duration"
                    android:textColor="@color/white"
                    android:fontFamily="@font/quicksand_light" />
            </LinearLayout>


            <TextView
                android:id="@+id/txtFilmDirector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/quicksand_semibold"
                android:text="@string/film_director"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtKeyTopics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/quicksand_regular"
                android:text="@string/topicos_chave_abordados"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>